Added validation for models

--- a/app/views/scfs/_form.html.erb
+++ b/app/views/scfs/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :description, id: :scf_description %>
   </div>
 
+  <div class="field">
+    <%= form.label :default_value %>
+    <%= form.text_field :default_value, id: :default_value %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
