--- a/app/views/scfs/show.html.erb
+++ b/app/views/scfs/show.html.erb
@@ -10,5 +10,10 @@
   <%= @scf.description %>
 </p>
 
+<p>
+  <strong>Description:</strong>
+  <%= @scf.default_value %>
+</p>
+
 <%= link_to 'Edit', edit_scf_path(@scf) %> |
 <%= link_to 'Back', scfs_path %>
